tests/baselines/reference/umdDependencyCommentName2.errors.txt
umdDependencyCommentName2.ts(5,21): error TS2792: Cannot find module 'm2'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?


==== umdDependencyCommentName2.ts (1 errors) ====
    ///<amd-dependency path='bar' name='b'/>
    ///<amd-dependency path='foo'/>
    ///<amd-dependency path='goo' name='c'/>
    
    import m1 = require("m2")
                        ~~~~
!!! error TS2792: Cannot find module 'm2'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    m1.f();
    